--- a/RealTimeObjectDetection/Tutorial.ipynb
+++ b/RealTimeObjectDetection/Tutorial.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = [{'name':'Mask', 'id':1}, {'name':'NoMask', 'id':2}]\n",
+    "labels = [{'name':'Hello', 'id':1}]\n",
     "\n",
     "with open(ANNOTATION_PATH + '\\label_map.pbtxt', 'w') as f:\n",
     "    for label in labels:\n",
@@ -627,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
