--- a/RealTimeObjectDetection/Tutorial.ipynb
+++ b/RealTimeObjectDetection/Tutorial.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,15 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Successfully created the TFRecord file: Tensorflow/workspace/annotations/train.record\n",
-      "Successfully created the TFRecord file: Tensorflow/workspace/annotations/test.record\n"
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\ayiha\\Desktop\\CV_AI_Project\\RealTimeObjectDetection\\Tensorflow\\scripts\\generate_tfrecord.py\", line 29, in <module>\n",
+      "    from object_detection.utils import dataset_util, label_map_util\n",
+      "  File \"c:\\Users\\ayiha\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\object_detection\\utils\\label_map_util.py\", line 21, in <module>\n",
+      "    from object_detection.protos import string_int_label_map_pb2\n",
+      "ImportError: cannot import name 'string_int_label_map_pb2' from 'object_detection.protos' (c:\\Users\\ayiha\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\object_detection\\protos\\__init__.py)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\ayiha\\Desktop\\CV_AI_Project\\RealTimeObjectDetection\\Tensorflow\\scripts\\generate_tfrecord.py\", line 29, in <module>\n",
+      "    from object_detection.utils import dataset_util, label_map_util\n",
+      "  File \"c:\\Users\\ayiha\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\object_detection\\utils\\label_map_util.py\", line 21, in <module>\n",
+      "    from object_detection.protos import string_int_label_map_pb2\n",
+      "ImportError: cannot import name 'string_int_label_map_pb2' from 'object_detection.protos' (c:\\Users\\ayiha\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\object_detection\\protos\\__init__.py)\n"
      ]
     }
    ],
@@ -627,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
