tf records generated

--- a/RealTimeObjectDetection/Tutorial.ipynb
+++ b/RealTimeObjectDetection/Tutorial.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,21 +69,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\ayiha\\Desktop\\CV_AI_Project\\RealTimeObjectDetection\\Tensorflow\\scripts\\generate_tfrecord.py\", line 29, in <module>\n",
-      "    from object_detection.utils import dataset_util, label_map_util\n",
-      "  File \"c:\\Users\\ayiha\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\object_detection\\utils\\label_map_util.py\", line 21, in <module>\n",
-      "    from object_detection.protos import string_int_label_map_pb2\n",
-      "ImportError: cannot import name 'string_int_label_map_pb2' from 'object_detection.protos' (c:\\Users\\ayiha\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\object_detection\\protos\\__init__.py)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\ayiha\\Desktop\\CV_AI_Project\\RealTimeObjectDetection\\Tensorflow\\scripts\\generate_tfrecord.py\", line 29, in <module>\n",
-      "    from object_detection.utils import dataset_util, label_map_util\n",
-      "  File \"c:\\Users\\ayiha\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\object_detection\\utils\\label_map_util.py\", line 21, in <module>\n",
-      "    from object_detection.protos import string_int_label_map_pb2\n",
-      "ImportError: cannot import name 'string_int_label_map_pb2' from 'object_detection.protos' (c:\\Users\\ayiha\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\object_detection\\protos\\__init__.py)\n"
+      "Successfully created the TFRecord file: Tensorflow/workspace/annotations/train.record\n",
+      "Successfully created the TFRecord file: Tensorflow/workspace/annotations/test.record\n"
      ]
     }
    ],
