pipeline added to mobnet

--- a/RealTimeObjectDetection/Tutorial.ipynb
+++ b/RealTimeObjectDetection/Tutorial.ipynb
@@ -91,14 +91,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cloning into 'models'...\n"
+      "Cloning into 'models'...\n",
+      "Updating files:  10% (359/3393)\n",
+      "Updating files:  11% (374/3393)\n",
+      "Updating files:  12% (408/3393)\n",
+      "Updating files:  13% (442/3393)\n",
+      "Updating files:  14% (476/3393)\n",
+      "Updating files:  15% (509/3393)\n",
+      "Updating files:  16% (543/3393)\n",
+      "Updating files:  17% (577/3393)\n",
+      "Updating files:  17% (599/3393)\n",
+      "Updating files:  18% (611/3393)\n",
+      "Updating files:  19% (645/3393)\n",
+      "Updating files:  20% (679/3393)\n",
+      "Updating files:  20% (707/3393)\n",
+      "Updating files:  21% (713/3393)\n",
+      "Updating files:  22% (747/3393)\n",
+      "Updating files:  23% (781/3393)\n",
+      "Updating files:  23% (812/3393)\n",
+      "Updating files:  24% (815/3393)\n",
+      "Updating files:  25% (849/3393)\n",
+      "Updating files:  26% (883/3393)\n",
+      "Updating files:  27% (917/3393)\n",
+      "Updating files:  28% (951/3393)\n",
+      "Updating files:  29% (984/3393)\n",
+      "Updating files:  29% (985/3393)\n",
+      "Updating files:  30% (1018/3393)\n",
+      "Updating files:  31% (1052/3393)\n",
+      "Updating files:  32% (1086/3393)\n",
+      "Updating files:  33% (1120/3393)\n",
+      "Updating files:  33% (1124/3393)\n",
+      "Updating files:  34% (1154/3393)\n",
+      "Updating files:  35% (1188/3393)\n",
+      "Updating files:  36% (1222/3393)\n",
+      "Updating files:  37% (1256/3393)\n",
+      "Updating files:  38% (1290/3393)\n",
+      "Updating files:  38% (1302/3393)\n",
+      "Updating files:  39% (1324/3393)\n",
+      "Updating files:  39% (1343/3393)\n",
+      "Updating files:  40% (1358/3393)\n",
+      "Updating files:  41% (1392/3393)\n",
+      "Updating files:  42% (1426/3393)\n",
+      "Updating files:  43% (1459/3393)\n",
+      "Updating files:  43% (1480/3393)\n",
+      "Updating files:  44% (1493/3393)\n",
+      "Updating files:  45% (1527/3393)\n",
+      "Updating files:  46% (1561/3393)\n",
+      "Updating files:  47% (1595/3393)\n",
+      "Updating files:  48% (1629/3393)\n",
+      "Updating files:  48% (1657/3393)\n",
+      "Updating files:  49% (1663/3393)\n",
+      "Updating files:  50% (1697/3393)\n",
+      "Updating files:  51% (1731/3393)\n",
+      "Updating files:  51% (1764/3393)\n",
+      "Updating files:  52% (1765/3393)\n",
+      "Updating files:  53% (1799/3393)\n",
+      "Updating files:  54% (1833/3393)\n",
+      "Updating files:  54% (1863/3393)\n",
+      "Updating files:  55% (1867/3393)\n",
+      "Updating files:  56% (1901/3393)\n",
+      "Updating files:  57% (1935/3393)\n",
+      "Updating files:  58% (1968/3393)\n",
+      "Updating files:  58% (1999/3393)\n",
+      "Updating files:  59% (2002/3393)\n",
+      "Updating files:  60% (2036/3393)\n",
+      "Updating files:  61% (2070/3393)\n",
+      "Updating files:  61% (2097/3393)\n",
+      "Updating files:  62% (2104/3393)\n",
+      "Updating files:  63% (2138/3393)\n",
+      "Updating files:  64% (2172/3393)\n",
+      "Updating files:  64% (2193/3393)\n",
+      "Updating files:  65% (2206/3393)\n",
+      "Updating files:  66% (2240/3393)\n",
+      "Updating files:  67% (2274/3393)\n",
+      "Updating files:  68% (2308/3393)\n",
+      "Updating files:  68% (2335/3393)\n",
+      "Updating files:  69% (2342/3393)\n",
+      "Updating files:  70% (2376/3393)\n",
+      "Updating files:  70% (2382/3393)\n",
+      "Updating files:  70% (2383/3393)\n",
+      "Updating files:  70% (2384/3393)\n",
+      "Updating files:  71% (2410/3393)\n",
+      "Updating files:  72% (2443/3393)\n",
+      "Updating files:  72% (2470/3393)\n",
+      "Updating files:  73% (2477/3393)\n",
+      "Updating files:  74% (2511/3393)\n",
+      "Updating files:  75% (2545/3393)\n",
+      "Updating files:  76% (2579/3393)\n",
+      "Updating files:  77% (2613/3393)\n",
+      "Updating files:  77% (2623/3393)\n",
+      "Updating files:  78% (2647/3393)\n",
+      "Updating files:  78% (2651/3393)\n",
+      "Updating files:  79% (2681/3393)\n",
+      "Updating files:  80% (2715/3393)\n",
+      "Updating files:  81% (2749/3393)\n",
+      "Updating files:  82% (2783/3393)\n",
+      "Updating files:  83% (2817/3393)\n",
+      "Updating files:  83% (2826/3393)\n",
+      "Updating files:  84% (2851/3393)\n",
+      "Updating files:  85% (2885/3393)\n",
+      "Updating files:  86% (2918/3393)\n",
+      "Updating files:  87% (2952/3393)\n",
+      "Updating files:  87% (2967/3393)\n",
+      "Updating files:  88% (2986/3393)\n",
+      "Updating files:  88% (3014/3393)\n",
+      "Updating files:  89% (3020/3393)\n",
+      "Updating files:  90% (3054/3393)\n",
+      "Updating files:  91% (3088/3393)\n",
+      "Updating files:  91% (3112/3393)\n",
+      "Updating files:  92% (3122/3393)\n",
+      "Updating files:  93% (3156/3393)\n",
+      "Updating files:  94% (3190/3393)\n",
+      "Updating files:  95% (3224/3393)\n",
+      "Updating files:  96% (3258/3393)\n",
+      "Updating files:  97% (3292/3393)\n",
+      "Updating files:  97% (3308/3393)\n",
+      "Updating files:  98% (3326/3393)\n",
+      "Updating files:  99% (3360/3393)\n",
+      "Updating files: 100% (3393/3393)\n",
+      "Updating files: 100% (3393/3393), done.\n"
      ]
     }
    ],
@@ -126,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,11 +262,18 @@
      "text": [
       "A subdirectory or file Tensorflow\\workspace\\models\\my_ssd_mobnet already exists.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The syntax of the command is incorrect.\n"
+     ]
     }
    ],
    "source": [
     "!mkdir {'Tensorflow\\workspace\\models\\\\'+CUSTOM_MODEL_NAME}\n",
-    "!cp {PRETRAINED_MODEL_PATH+'/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/pipeline.config'} {MODEL_PATH+'/'+CUSTOM_MODEL_NAME}"
+    "!copy {PRETRAINED_MODEL_PATH+'/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/pipeline.config'} {MODEL_PATH+'/'+CUSTOM_MODEL_NAME}"
    ]
   },
   {
