--- a/RealTimeObjectDetection/Tutorial.ipynb
+++ b/RealTimeObjectDetection/Tutorial.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +324,7 @@
      "data": {
       "text/plain": [
        "{'model': ssd {\n",
-       "   num_classes: 2\n",
+       "   num_classes: 90\n",
        "   image_resizer {\n",
        "     fixed_shape_resizer {\n",
        "       height: 320\n",
@@ -338,20 +338,20 @@
        "     conv_hyperparams {\n",
        "       regularizer {\n",
        "         l2_regularizer {\n",
-       "           weight: 4e-05\n",
+       "           weight: 3.9999998989515007e-05\n",
        "         }\n",
        "       }\n",
        "       initializer {\n",
        "         random_normal_initializer {\n",
        "           mean: 0.0\n",
-       "           stddev: 0.01\n",
+       "           stddev: 0.009999999776482582\n",
        "         }\n",
        "       }\n",
        "       activation: RELU_6\n",
        "       batch_norm {\n",
-       "         decay: 0.997\n",
+       "         decay: 0.996999979019165\n",
        "         scale: true\n",
-       "         epsilon: 0.001\n",
+       "         epsilon: 0.0010000000474974513\n",
        "       }\n",
        "     }\n",
        "     use_depthwise: true\n",
@@ -389,26 +389,26 @@
        "       conv_hyperparams {\n",
        "         regularizer {\n",
        "           l2_regularizer {\n",
-       "             weight: 4e-05\n",
+       "             weight: 3.9999998989515007e-05\n",
        "           }\n",
        "         }\n",
        "         initializer {\n",
        "           random_normal_initializer {\n",
        "             mean: 0.0\n",
-       "             stddev: 0.01\n",
+       "             stddev: 0.009999999776482582\n",
        "           }\n",
        "         }\n",
        "         activation: RELU_6\n",
        "         batch_norm {\n",
-       "           decay: 0.997\n",
+       "           decay: 0.996999979019165\n",
        "           scale: true\n",
-       "           epsilon: 0.001\n",
+       "           epsilon: 0.0010000000474974513\n",
        "         }\n",
        "       }\n",
        "       depth: 128\n",
        "       num_layers_before_predictor: 4\n",
        "       kernel_size: 3\n",
-       "       class_prediction_bias_init: -4.6\n",
+       "       class_prediction_bias_init: -4.599999904632568\n",
        "       share_prediction_tower: true\n",
        "       use_depthwise: true\n",
        "     }\n",
@@ -426,8 +426,8 @@
        "   }\n",
        "   post_processing {\n",
        "     batch_non_max_suppression {\n",
-       "       score_threshold: 1e-08\n",
-       "       iou_threshold: 0.6\n",
+       "       score_threshold: 9.99999993922529e-09\n",
+       "       iou_threshold: 0.6000000238418579\n",
        "       max_detections_per_class: 100\n",
        "       max_total_detections: 100\n",
        "       use_static_shapes: false\n",
@@ -453,7 +453,8 @@
        "   normalize_loc_loss_by_codesize: true\n",
        "   inplace_batchnorm_update: true\n",
        "   freeze_batchnorm: false\n",
-       " }, 'train_config': batch_size: 4\n",
+       " },\n",
+       " 'train_config': batch_size: 128\n",
        " data_augmentation_options {\n",
        "   random_horizontal_flip {\n",
        "   }\n",
@@ -473,42 +474,46 @@
        "   momentum_optimizer {\n",
        "     learning_rate {\n",
        "       cosine_decay_learning_rate {\n",
-       "         learning_rate_base: 0.08\n",
+       "         learning_rate_base: 0.07999999821186066\n",
        "         total_steps: 50000\n",
-       "         warmup_learning_rate: 0.026666\n",
+       "         warmup_learning_rate: 0.026666000485420227\n",
        "         warmup_steps: 1000\n",
        "       }\n",
        "     }\n",
-       "     momentum_optimizer_value: 0.9\n",
+       "     momentum_optimizer_value: 0.8999999761581421\n",
        "   }\n",
        "   use_moving_average: false\n",
        " }\n",
-       " fine_tune_checkpoint: \"Tensorflow/workspace/pre-trained-models/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0\"\n",
+       " fine_tune_checkpoint: \"PATH_TO_BE_CONFIGURED\"\n",
        " num_steps: 50000\n",
        " startup_delay_steps: 0.0\n",
        " replicas_to_aggregate: 8\n",
        " max_number_of_boxes: 100\n",
        " unpad_groundtruth_tensors: false\n",
-       " fine_tune_checkpoint_type: \"detection\"\n",
-       " fine_tune_checkpoint_version: V2, 'train_input_config': label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " fine_tune_checkpoint_type: \"classification\"\n",
+       " fine_tune_checkpoint_version: V2,\n",
+       " 'train_input_config': label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
        " tf_record_input_reader {\n",
-       "   input_path: \"Tensorflow/workspace/annotations/train.record\"\n",
-       " }, 'eval_config': metrics_set: \"coco_detection_metrics\"\n",
-       " use_moving_averages: false, 'eval_input_configs': [label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
+       " },\n",
+       " 'eval_config': metrics_set: \"coco_detection_metrics\"\n",
+       " use_moving_averages: false,\n",
+       " 'eval_input_configs': [label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
        " shuffle: false\n",
        " num_epochs: 1\n",
        " tf_record_input_reader {\n",
-       "   input_path: \"Tensorflow/workspace/annotations/test.record\"\n",
+       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
        " }\n",
-       " ], 'eval_input_config': label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " ],\n",
+       " 'eval_input_config': label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
        " shuffle: false\n",
        " num_epochs: 1\n",
        " tf_record_input_reader {\n",
-       "   input_path: \"Tensorflow/workspace/annotations/test.record\"\n",
+       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
        " }}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,11 +536,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline_config.model.ssd.num_classes = 2\n",
+    "pipeline_config.model.ssd.num_classes = 1\n",
     "pipeline_config.train_config.batch_size = 4\n",
     "pipeline_config.train_config.fine_tune_checkpoint = PRETRAINED_MODEL_PATH+'/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0'\n",
     "pipeline_config.train_config.fine_tune_checkpoint_type = \"detection\"\n",
@@ -547,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
