--- a/RealTimeObjectDetection/Tutorial.ipynb
+++ b/RealTimeObjectDetection/Tutorial.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully created the TFRecord file: Tensorflow/workspace/annotations/train.record\n",
-      "Successfully created the TFRecord file: Tensorflow/workspace/annotations/test.record\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python {SCRIPTS_PATH + '/generate_tfrecord.py'} -x {IMAGE_PATH + '/train'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/train.record'}\n",
     "!python {SCRIPTS_PATH + '/generate_tfrecord.py'} -x{IMAGE_PATH + '/test'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/test.record'}"
@@ -91,142 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'models'...\n",
-      "Updating files:  10% (359/3393)\n",
-      "Updating files:  11% (374/3393)\n",
-      "Updating files:  12% (408/3393)\n",
-      "Updating files:  13% (442/3393)\n",
-      "Updating files:  14% (476/3393)\n",
-      "Updating files:  15% (509/3393)\n",
-      "Updating files:  16% (543/3393)\n",
-      "Updating files:  17% (577/3393)\n",
-      "Updating files:  17% (599/3393)\n",
-      "Updating files:  18% (611/3393)\n",
-      "Updating files:  19% (645/3393)\n",
-      "Updating files:  20% (679/3393)\n",
-      "Updating files:  20% (707/3393)\n",
-      "Updating files:  21% (713/3393)\n",
-      "Updating files:  22% (747/3393)\n",
-      "Updating files:  23% (781/3393)\n",
-      "Updating files:  23% (812/3393)\n",
-      "Updating files:  24% (815/3393)\n",
-      "Updating files:  25% (849/3393)\n",
-      "Updating files:  26% (883/3393)\n",
-      "Updating files:  27% (917/3393)\n",
-      "Updating files:  28% (951/3393)\n",
-      "Updating files:  29% (984/3393)\n",
-      "Updating files:  29% (985/3393)\n",
-      "Updating files:  30% (1018/3393)\n",
-      "Updating files:  31% (1052/3393)\n",
-      "Updating files:  32% (1086/3393)\n",
-      "Updating files:  33% (1120/3393)\n",
-      "Updating files:  33% (1124/3393)\n",
-      "Updating files:  34% (1154/3393)\n",
-      "Updating files:  35% (1188/3393)\n",
-      "Updating files:  36% (1222/3393)\n",
-      "Updating files:  37% (1256/3393)\n",
-      "Updating files:  38% (1290/3393)\n",
-      "Updating files:  38% (1302/3393)\n",
-      "Updating files:  39% (1324/3393)\n",
-      "Updating files:  39% (1343/3393)\n",
-      "Updating files:  40% (1358/3393)\n",
-      "Updating files:  41% (1392/3393)\n",
-      "Updating files:  42% (1426/3393)\n",
-      "Updating files:  43% (1459/3393)\n",
-      "Updating files:  43% (1480/3393)\n",
-      "Updating files:  44% (1493/3393)\n",
-      "Updating files:  45% (1527/3393)\n",
-      "Updating files:  46% (1561/3393)\n",
-      "Updating files:  47% (1595/3393)\n",
-      "Updating files:  48% (1629/3393)\n",
-      "Updating files:  48% (1657/3393)\n",
-      "Updating files:  49% (1663/3393)\n",
-      "Updating files:  50% (1697/3393)\n",
-      "Updating files:  51% (1731/3393)\n",
-      "Updating files:  51% (1764/3393)\n",
-      "Updating files:  52% (1765/3393)\n",
-      "Updating files:  53% (1799/3393)\n",
-      "Updating files:  54% (1833/3393)\n",
-      "Updating files:  54% (1863/3393)\n",
-      "Updating files:  55% (1867/3393)\n",
-      "Updating files:  56% (1901/3393)\n",
-      "Updating files:  57% (1935/3393)\n",
-      "Updating files:  58% (1968/3393)\n",
-      "Updating files:  58% (1999/3393)\n",
-      "Updating files:  59% (2002/3393)\n",
-      "Updating files:  60% (2036/3393)\n",
-      "Updating files:  61% (2070/3393)\n",
-      "Updating files:  61% (2097/3393)\n",
-      "Updating files:  62% (2104/3393)\n",
-      "Updating files:  63% (2138/3393)\n",
-      "Updating files:  64% (2172/3393)\n",
-      "Updating files:  64% (2193/3393)\n",
-      "Updating files:  65% (2206/3393)\n",
-      "Updating files:  66% (2240/3393)\n",
-      "Updating files:  67% (2274/3393)\n",
-      "Updating files:  68% (2308/3393)\n",
-      "Updating files:  68% (2335/3393)\n",
-      "Updating files:  69% (2342/3393)\n",
-      "Updating files:  70% (2376/3393)\n",
-      "Updating files:  70% (2382/3393)\n",
-      "Updating files:  70% (2383/3393)\n",
-      "Updating files:  70% (2384/3393)\n",
-      "Updating files:  71% (2410/3393)\n",
-      "Updating files:  72% (2443/3393)\n",
-      "Updating files:  72% (2470/3393)\n",
-      "Updating files:  73% (2477/3393)\n",
-      "Updating files:  74% (2511/3393)\n",
-      "Updating files:  75% (2545/3393)\n",
-      "Updating files:  76% (2579/3393)\n",
-      "Updating files:  77% (2613/3393)\n",
-      "Updating files:  77% (2623/3393)\n",
-      "Updating files:  78% (2647/3393)\n",
-      "Updating files:  78% (2651/3393)\n",
-      "Updating files:  79% (2681/3393)\n",
-      "Updating files:  80% (2715/3393)\n",
-      "Updating files:  81% (2749/3393)\n",
-      "Updating files:  82% (2783/3393)\n",
-      "Updating files:  83% (2817/3393)\n",
-      "Updating files:  83% (2826/3393)\n",
-      "Updating files:  84% (2851/3393)\n",
-      "Updating files:  85% (2885/3393)\n",
-      "Updating files:  86% (2918/3393)\n",
-      "Updating files:  87% (2952/3393)\n",
-      "Updating files:  87% (2967/3393)\n",
-      "Updating files:  88% (2986/3393)\n",
-      "Updating files:  88% (3014/3393)\n",
-      "Updating files:  89% (3020/3393)\n",
-      "Updating files:  90% (3054/3393)\n",
-      "Updating files:  91% (3088/3393)\n",
-      "Updating files:  91% (3112/3393)\n",
-      "Updating files:  92% (3122/3393)\n",
-      "Updating files:  93% (3156/3393)\n",
-      "Updating files:  94% (3190/3393)\n",
-      "Updating files:  95% (3224/3393)\n",
-      "Updating files:  96% (3258/3393)\n",
-      "Updating files:  97% (3292/3393)\n",
-      "Updating files:  97% (3308/3393)\n",
-      "Updating files:  98% (3326/3393)\n",
-      "Updating files:  99% (3360/3393)\n",
-      "Updating files: 100% (3393/3393)\n",
-      "Updating files: 100% (3393/3393), done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cd Tensorflow && git clone https://github.com/tensorflow/models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,24 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "A subdirectory or file Tensorflow\\workspace\\models\\my_ssd_mobnet already exists.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The syntax of the command is incorrect.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!mkdir {'Tensorflow\\workspace\\models\\\\'+CUSTOM_MODEL_NAME}\n",
     "!copy {PRETRAINED_MODEL_PATH+'/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/pipeline.config'} {MODEL_PATH+'/'+CUSTOM_MODEL_NAME}"
@@ -285,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,216 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'model': ssd {\n",
-       "   num_classes: 90\n",
-       "   image_resizer {\n",
-       "     fixed_shape_resizer {\n",
-       "       height: 320\n",
-       "       width: 320\n",
-       "     }\n",
-       "   }\n",
-       "   feature_extractor {\n",
-       "     type: \"ssd_mobilenet_v2_fpn_keras\"\n",
-       "     depth_multiplier: 1.0\n",
-       "     min_depth: 16\n",
-       "     conv_hyperparams {\n",
-       "       regularizer {\n",
-       "         l2_regularizer {\n",
-       "           weight: 3.9999998989515007e-05\n",
-       "         }\n",
-       "       }\n",
-       "       initializer {\n",
-       "         random_normal_initializer {\n",
-       "           mean: 0.0\n",
-       "           stddev: 0.009999999776482582\n",
-       "         }\n",
-       "       }\n",
-       "       activation: RELU_6\n",
-       "       batch_norm {\n",
-       "         decay: 0.996999979019165\n",
-       "         scale: true\n",
-       "         epsilon: 0.0010000000474974513\n",
-       "       }\n",
-       "     }\n",
-       "     use_depthwise: true\n",
-       "     override_base_feature_extractor_hyperparams: true\n",
-       "     fpn {\n",
-       "       min_level: 3\n",
-       "       max_level: 7\n",
-       "       additional_layer_depth: 128\n",
-       "     }\n",
-       "   }\n",
-       "   box_coder {\n",
-       "     faster_rcnn_box_coder {\n",
-       "       y_scale: 10.0\n",
-       "       x_scale: 10.0\n",
-       "       height_scale: 5.0\n",
-       "       width_scale: 5.0\n",
-       "     }\n",
-       "   }\n",
-       "   matcher {\n",
-       "     argmax_matcher {\n",
-       "       matched_threshold: 0.5\n",
-       "       unmatched_threshold: 0.5\n",
-       "       ignore_thresholds: false\n",
-       "       negatives_lower_than_unmatched: true\n",
-       "       force_match_for_each_row: true\n",
-       "       use_matmul_gather: true\n",
-       "     }\n",
-       "   }\n",
-       "   similarity_calculator {\n",
-       "     iou_similarity {\n",
-       "     }\n",
-       "   }\n",
-       "   box_predictor {\n",
-       "     weight_shared_convolutional_box_predictor {\n",
-       "       conv_hyperparams {\n",
-       "         regularizer {\n",
-       "           l2_regularizer {\n",
-       "             weight: 3.9999998989515007e-05\n",
-       "           }\n",
-       "         }\n",
-       "         initializer {\n",
-       "           random_normal_initializer {\n",
-       "             mean: 0.0\n",
-       "             stddev: 0.009999999776482582\n",
-       "           }\n",
-       "         }\n",
-       "         activation: RELU_6\n",
-       "         batch_norm {\n",
-       "           decay: 0.996999979019165\n",
-       "           scale: true\n",
-       "           epsilon: 0.0010000000474974513\n",
-       "         }\n",
-       "       }\n",
-       "       depth: 128\n",
-       "       num_layers_before_predictor: 4\n",
-       "       kernel_size: 3\n",
-       "       class_prediction_bias_init: -4.599999904632568\n",
-       "       share_prediction_tower: true\n",
-       "       use_depthwise: true\n",
-       "     }\n",
-       "   }\n",
-       "   anchor_generator {\n",
-       "     multiscale_anchor_generator {\n",
-       "       min_level: 3\n",
-       "       max_level: 7\n",
-       "       anchor_scale: 4.0\n",
-       "       aspect_ratios: 1.0\n",
-       "       aspect_ratios: 2.0\n",
-       "       aspect_ratios: 0.5\n",
-       "       scales_per_octave: 2\n",
-       "     }\n",
-       "   }\n",
-       "   post_processing {\n",
-       "     batch_non_max_suppression {\n",
-       "       score_threshold: 9.99999993922529e-09\n",
-       "       iou_threshold: 0.6000000238418579\n",
-       "       max_detections_per_class: 100\n",
-       "       max_total_detections: 100\n",
-       "       use_static_shapes: false\n",
-       "     }\n",
-       "     score_converter: SIGMOID\n",
-       "   }\n",
-       "   normalize_loss_by_num_matches: true\n",
-       "   loss {\n",
-       "     localization_loss {\n",
-       "       weighted_smooth_l1 {\n",
-       "       }\n",
-       "     }\n",
-       "     classification_loss {\n",
-       "       weighted_sigmoid_focal {\n",
-       "         gamma: 2.0\n",
-       "         alpha: 0.25\n",
-       "       }\n",
-       "     }\n",
-       "     classification_weight: 1.0\n",
-       "     localization_weight: 1.0\n",
-       "   }\n",
-       "   encode_background_as_zeros: true\n",
-       "   normalize_loc_loss_by_codesize: true\n",
-       "   inplace_batchnorm_update: true\n",
-       "   freeze_batchnorm: false\n",
-       " },\n",
-       " 'train_config': batch_size: 128\n",
-       " data_augmentation_options {\n",
-       "   random_horizontal_flip {\n",
-       "   }\n",
-       " }\n",
-       " data_augmentation_options {\n",
-       "   random_crop_image {\n",
-       "     min_object_covered: 0.0\n",
-       "     min_aspect_ratio: 0.75\n",
-       "     max_aspect_ratio: 3.0\n",
-       "     min_area: 0.75\n",
-       "     max_area: 1.0\n",
-       "     overlap_thresh: 0.0\n",
-       "   }\n",
-       " }\n",
-       " sync_replicas: true\n",
-       " optimizer {\n",
-       "   momentum_optimizer {\n",
-       "     learning_rate {\n",
-       "       cosine_decay_learning_rate {\n",
-       "         learning_rate_base: 0.07999999821186066\n",
-       "         total_steps: 50000\n",
-       "         warmup_learning_rate: 0.026666000485420227\n",
-       "         warmup_steps: 1000\n",
-       "       }\n",
-       "     }\n",
-       "     momentum_optimizer_value: 0.8999999761581421\n",
-       "   }\n",
-       "   use_moving_average: false\n",
-       " }\n",
-       " fine_tune_checkpoint: \"PATH_TO_BE_CONFIGURED\"\n",
-       " num_steps: 50000\n",
-       " startup_delay_steps: 0.0\n",
-       " replicas_to_aggregate: 8\n",
-       " max_number_of_boxes: 100\n",
-       " unpad_groundtruth_tensors: false\n",
-       " fine_tune_checkpoint_type: \"classification\"\n",
-       " fine_tune_checkpoint_version: V2,\n",
-       " 'train_input_config': label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " tf_record_input_reader {\n",
-       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " },\n",
-       " 'eval_config': metrics_set: \"coco_detection_metrics\"\n",
-       " use_moving_averages: false,\n",
-       " 'eval_input_configs': [label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " shuffle: false\n",
-       " num_epochs: 1\n",
-       " tf_record_input_reader {\n",
-       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " }\n",
-       " ],\n",
-       " 'eval_input_config': label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " shuffle: false\n",
-       " num_epochs: 1\n",
-       " tf_record_input_reader {\n",
-       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
-       " }}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,27 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,17 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "python Tensorflow/models/research/object_detection/model_main_tf2.py --model_dir=Tensorflow/workspace/models/my_ssd_mobnet --pipeline_config_path=Tensorflow/workspace/models/my_ssd_mobnet/pipeline.config --num_train_steps=5000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\"\"python {}/research/object_detection/model_main_tf2.py --model_dir={}/{} --pipeline_config_path={}/{}/pipeline.config --num_train_steps=5000\"\"\".format(APIMODEL_PATH, MODEL_PATH,CUSTOM_MODEL_NAME,MODEL_PATH,CUSTOM_MODEL_NAME))"
    ]
@@ -614,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +269,7 @@
     "\n",
     "# Restore checkpoint\n",
     "ckpt = tf.compat.v2.train.Checkpoint(model=detection_model)\n",
-    "ckpt.restore(os.path.join(CHECKPOINT_PATH, 'ckpt-6')).expect_partial()\n",
+    "ckpt.restore(os.path.join(CHECKPOINT_PATH, 'ckpt-1')).expect_partial()\n",
     "\n",
     "@tf.function\n",
     "def detect_fn(image):\n",
@@ -655,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,16 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap.release()"
+    "# cap = cv2.VideoCapture(0)\n",
+    "cap.release()\n",
+    "# cap.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,8 +359,8 @@
     "                detections['detection_scores'],\n",
     "                category_index,\n",
     "                use_normalized_coordinates=True,\n",
-    "                max_boxes_to_draw=5,\n",
-    "                min_score_thresh=.5,\n",
+    "                max_boxes_to_draw=1,\n",
+    "                min_score_thresh=.1,\n",
     "                agnostic_mode=False)\n",
     "\n",
     "    cv2.imshow('object detection',  cv2.resize(image_np_with_detections, (800, 600)))\n",
@@ -737,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
